已调整项目结构，在设计歌单功能前保留副本

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="title_notifications">Notifications</string>
     <string name="logo">logo</string>
     <string name="close">关闭</string>
+
+    <string-array name="play_mode_text">
+        <item>顺序播放</item>
+        <item>单曲循环</item>
+        <item>列表循环</item>
+    </string-array>
 </resources>
