--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -6,4 +6,19 @@
     <string name="title_notifications">Notifications</string>
     <string name="close">关闭</string>
     <string name="logo">logo</string>
+    <string name="next_to_play">下一首播放</string>
+    <string name="download">下载</string>
+    <string name="share">分享</string>
+    <string name="sing_info">查看歌手</string>
+    <string name="record_histroy">搜索历史</string>
+    <string name="play_all">全部播放</string>
+    <string name="login_user_hint">用户名 / 邮箱 / 手机号码</string>
+    <string name="add_to_queue">加到歌单</string>
+    <string name="album_info">查看专辑</string>
+    <string name="clear_record_hint">是否要清空搜索历史?</string>
+    <string name="login_password_hint">验证码</string>
+    <string name="login_text">登 录</string>
+    <string name="get_verify">获取验证码</string>
+    <string name="or_sign_up">- 注 册 -</string>
+    <string name="log_in_to_zhiliao_music">知 了 音 乐</string>
 </resources>
